# screen_timed

./: .env  .gitignore  Cargo.toml  README.md  daemon_removal.py  daemon_setup.py  screen_time_data.csv
daemon/: .gitignore  Cargo.toml
daemon/src/: csv_writer.rs  lib.rs  notification.rs  screen_time.rs  signals.rs  socket.rs  threads.rs
daemon/src/windows/: mod.rs
desktop_app/: README.md  TODO.md  package-lock.json  package.json  tailwind.config.cjs  tsconfig.json  ui.config.json
desktop_app/src/: App.tsx  Application-svg.tsx  Application-table.tsx  styles.css
desktop_app/src-tauri/: Cargo.toml  tauri.conf.json
desktop_app/src-tauri/src/: data_analysis.rs  main.rs  socket_comm.rs
desktop_app/src/components/ui/: alert-dialog.tsx  button.tsx  card.tsx  flex.tsx  grid.tsx  popover.tsx  switch.tsx  tabs.tsx
desktop_app/src/lib/: icons.tsx
src/: config.rs  csv_writer.rs  lib.rs  main.rs  socket.rs  test_helpers.rs  threads.rs
