[package]
name = "screen_time_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
active-win-pos-rs = "0.8"
signal-hook="0.3"
csv="1.3"
serde = "1.0.197"
serde_with="3.6.1"
serde_derive = "1.0.197"
