[package]
name = "screen_timed"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
active-win-pos-rs = "0.8"
signal-hook="0.3"
csv="1.3"
serde = "1.0.197"
serde_with="3.6.1"
serde_derive = "1.0.197"
notify-rust = "4.10.0"
dotenvy = "0.15.7"
socket2 = "0.5.6"


[dev-dependencies]
rand = "0.8.5"
tempfile = "3.10.1"
serial_test = "3.0.0"
